--- a/exercicos/ex022/fundo007.html
+++ b/exercicos/ex022/fundo007.html
@@ -10,11 +10,22 @@
             background-color: yellow;
             height: 200px;
             width: 400px;
+            background-image: url(imagens/target001.png);
+            background-position: center center;
+            position: absolute;
+
+            left:50%;
+            top: 50%;
+
+            transform: translate(-50%, -50%);
         }
         #container{
             background-color: purple;
             height: 500px;
             padding: 10px;
+            background-image: url(imagens/target001.png);
+            background-position: center center;
+            position: relative;
 
         }  
     </style>
